--- a/go-calculator/Dockerfile
+++ b/go-calculator/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu AS build
 RUN apt-get update -y && apt install golang-go -y
 ENV GO111MODULE=off
 COPY . .
-RUN CGO_ENABLED=0 do build -o /app .
+RUN CGO_ENABLED=0 go build -o /app .
 
 #####################
 # MULTI STAGE BUILD #
